# prot2rust

./: Cargo.toml  README.md
.git-backup/: COMMIT_EDITMSG  config  index  packed-refs
.git-backup/logs/: HEAD
.git-backup/logs/refs/remotes/origin/: HEAD
.git-backup/objects/pack/: pack-d2beb1e5becd8d3077810d36c0e50e8b659c5254.idx  pack-d2beb1e5becd8d3077810d36c0e50e8b659c5254.pack
.git-backup/refs/heads/: master
src/: file.rs  lib.rs  main.rs  util.rs
src/generate/: bitfield.rs  mod.rs  structure.rs
