[package]
authors = [
    "Rudi Horn<dyn-git@rudi-horn.de>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "prot2rust"
repository = "https://github.com/rudihorn/prot2rust/"
version = "0.1.0"
readme = "README.md"

[dependencies]
cast = "0.3"
env_logger = "0.9"
inflections = "1.1"
log = { version = "~0.4", features = ["std"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full","extra-traits"]
